# python-types-scriptforge

./: .gitignore  README.rst  cspell.json  environment.yml  pyproject.toml  setup.py
.profile/: profile.ps1
cmds/: run_pypi_upload_test.py
docs/: conf.py  index.rst
notes/: apso.txt
scriptforge/: __init__.pyi
scriptforge-stubs/: __init__.pyi
